# genaiprj

./: .gitignore  AI_USAGE.md  CONFIGURATION.md  CORAX_writeup.html  DATA_SOURCES.md  PROJECT_STATUS.md  README.md  findings.md  requirements.txt  task_plan.md
benchmark_cases/: annotations.json  cases.json  corax_ablation_framing.json
commands/: corax.md  darf.md
data/: btc_usd_coingecko_sample.csv  quotemedia_prices_sample.csv  quotemedia_tickers_sample.csv
docs/: architecture.md  case_coverage_summary.md  corax_ablation_experiment_plan.md  local_darf_corax_map.md  part1_agent_pipeline_handoff.md  team_task_split.md
integrations/darf_mcp/: _async_io.py  config.py  pyproject.toml  pyrightconfig.json  server.py
integrations/darf_mcp/challenger/: __init__.py  claude_adapter.py  codex_adapter.py  protocol.py
integrations/darf_mcp/data/: __init__.py
integrations/darf_mcp/jobs/: __init__.py  manager.py  store.py
integrations/darf_mcp/lessons/: __init__.py  db.py
integrations/darf_mcp/ops/: __init__.py
integrations/darf_mcp/persistence/: __init__.py  db.py
integrations/darf_mcp/tests/: conftest.py  test_async_io.py  test_challenger_init.py  test_claude_adapter.py  test_codex_adapter.py  test_data.py  test_job_manager.py  test_job_store.py  test_lessons.py  test_ops.py  test_persistence.py  test_server.py  test_verify.py
integrations/darf_mcp/verify/: __init__.py
reports/: CORAX_primary_report_EN.md  case_analysis.md  corax_ablation_selected_20260527.md  primary_report.md
site/: index.html
tests/: test_adapters.py  test_auditor.py  test_sentinel.py  (+1 more)
(+80 files in other folders)
