[project]
name = "darf-mcp"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["darf_mcp", "darf_mcp.*", "ops", "ops.*", "data", "data.*", "verify", "verify.*", "lessons", "lessons.*", "challenger", "challenger.*", "jobs", "jobs.*"]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
